--- a/Front/src/app/main/home/home.component.html
+++ b/Front/src/app/main/home/home.component.html
@@ -1,49 +1,59 @@
-<div class="container">
+<div class="container-home">
   <!-- <img class="background" src="../../../assets/images/foto_home.jpg">
-  <img class=logo src="../../../assets/images/logo300.png" alt="logo">
-  <img class="steps"src="../../../assets/images/steps.png" alt="steps"> -->
-    <div class="toptowns">
-    <h1>Ciudades con más anfitrionas</h1>
-  <o-grid #grid columns="id_town;town_name;province_name" quick-filter="no" fixed-header="no"
-        service="towns" entity="hostcount" keys="id_town" [cols]="5" grid-item-height="2:3" controls="false"
-        refresh-button="false" show-page-size="true" page-size-options="10;15;20" pagination-controls="true" show-buttons-text="no"
-        gutter-size="10px" [ngStyle]="{'height':'auto'}" show-footer="no">
+  <img class=logo src="../../../assets/images/logo300.png" alt="logo"> -->
+  
+  <div class="img-steps">
+    <img class="steps" src="../../../assets/images/steps.png" alt="steps">
+  </div>
 
-        <div class="grid-container">
-            <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
-                <o-column class="container-item">
-                    <a [routerLink]="['/main/towns', list.id_town]" class="no-link-style">
-                        <div class="image-container">
-                            <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
-                            
-                        </div>
-                        <div class="town-data">     
-                            <div class="town-name">{{ list.town_name }}</div>
-                            <div class="province-name">{{ list.province_name }}</div>
-                            <div class="host-amount">
-                                <span class="material-symbols-outlined">person_pin_circle</span>{{ list.hostcount }}
+    <div class="top-towns">
+        <h2>Ciudades con más anfitrionas</h2>
+        <o-grid #grid columns="id_town;town_name;province_name" quick-filter="no" fixed-header="no"
+            service="towns" entity="hostcount" keys="id_town" [cols]="5" controls="false"
+            refresh-button="false" show-page-size="true" pagination-controls="true" show-buttons-text="no"
+            gutter-size="10px" show-footer="no">
+
+            <div class="grid-container">
+                <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
+                    <o-column class="container-item">
+                        <a [routerLink]="['/main/towns', list.id_town]" class="no-link-style">
+                            <div class="image-container">
+                                <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
                             </div>
-                        </div>
-                    </a>
-                </o-column>
-            </o-grid-item>
-        </div>
-    </o-grid>
-</div>
-<div class="topactivities">
-    <h1>Actividades preferidas</h1>
-    <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
-            entity="activitycount" keys="id_activity" columns="activity_name;id_activity" orderable="true"
-            show-page-size="no" quick-filter="false" cols="8" sortable-columns="activity_name"
-            detail-mode="none" pagination-controls="false"
-            controls="false" show-footer="no" gutter-size="4px" grid-item-height="55px">
-            <!-- Grid seleccionar actividades -->
-            <o-grid-item *ngFor="let item of activitiesB.dataArray">
-                <div class="activitiesButton-container" fxLayout="column" fxLayoutAlign="space-evenly center">
-                  <div class="town-name">{{ item.activity_name }}</div>
-                </div>
-            </o-grid-item>
+                            <div class="town-data">     
+                                <div class="town-name">{{ list.town_name }}</div>
+                                <div class="province-name">{{ list.province_name }}</div>
+                                <div class="host-amount">
+                                    <span class="material-symbols-outlined">person_pin_circle</span>{{ list.hostcount }}
+                                </div>
+                            </div>
+                        </a>
+                    </o-column>
+                </o-grid-item>
+            </div>
         </o-grid>
-      </div>
-      
+    </div>
+
+
+    <div class="top-activities">
+        <h2>Actividades preferidas</h2>
+        <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
+            entity="activitycount" keys="id_activity" columns="activity_name;id_activity" orderable="true"
+            show-page-size="no" quick-filter="false" cols="5" sortable-columns="activity_name"
+            detail-mode="none" pagination-controls="false" controls="false" show-footer="no" gutter-size="10px">
+            <div class="activities-container">
+                <o-grid-item *ngFor="let item of activitiesB.dataArray">
+                    <o-column class="activities-row">
+                        <a [routerLink]="['/main/towns/towns-detail', { activity: item.activity_name }]" class="no-link-style"> 
+                        <div>
+                            <img src="{{ getImageActivity(item.activity_name) }}" alt="{{ item.activity_name }}" class="activities-image">
+                        </div>
+                        <div class="activity-name">{{ item.activity_name }}</div>
+                        </a>
+                    </o-column>
+                </o-grid-item>
+            </div>
+        </o-grid>
+    </div>
+
 </div>
