--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
@@ -11,13 +11,15 @@
 
        
 
-
+            
             <o-grid #gridReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"
                 columns="read_host;id_reservation;id_client_traveler;id_client_host;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date;reservation_end;reservation_start"
                 query-rows="8" refresh-button="no" quick-filter="true"
-                quick-filter-columns="name_traveler;surname_traveler;message;status_name;read_host"
+                quick-filter-columns="name_traveler;surname_traveler;message;status_name"
                 visible-columns="name_host;message;status_name;reservation_date;read_host" [cols]="1" grid-item-height="60px"
                 gutter-size="6px" show-footer="no">
+
+              <o-grid-item><p>Number of messages not read: {{  numberOfMessagesNotReadInReceiv  }}</p></o-grid-item>
 
                 <o-grid-item *ngFor="let list of gridReservationReceived.dataArray">
 
@@ -79,8 +81,12 @@
             <o-grid #gridReservationSent attr="reservationSent" service="users" entity="reservationSent"
                 columns="read_traveler;id_reservation;name_traveler;id_client_traveler;id_client_host;surname_traveler;name_host;surname_host;message;status_name;reservation_date;reservation_start;reservation_end"
                 query-rows="8" refresh-button="no" quick-filter="true"
+                quick-filter-columns="name_traveler;surname_traveler;message;status_name"
                 visible-columns="name_host;message;status_name;reservation_date;read_traveler" [cols]="1" grid-item-height="60px"
                 gutter-size="6px" show-footer="no">
+
+                <o-grid-item><p>Number of messages not read: {{  numberOfMessagesNotReadInSent  }}</p></o-grid-item>
+
 
                 <o-grid-item *ngFor="let list of gridReservationSent.dataArray">
 
