--- a/Front/src/app/login/login.component.scss
+++ b/Front/src/app/login/login.component.scss
@@ -63,7 +63,7 @@ mat-icon {
 
         form {
           padding: 16px;
-          min-height: 600px;
+          min-height: 500px;
           min-width: 368px;
         }
 
@@ -113,6 +113,21 @@ mat-icon {
         }
       }
     }
+
+   
+
+  }
+
+  .register-section{
+
+    width: 368px;
+  }
+
+  .register-button{
+    width: 100%;
+    margin: 24px 0;
+    height: 40px; /* Aumenta el tamaño de los botones */
+    font-size: 16px;
 
   }
 
