--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
@@ -1,160 +1,182 @@
-.activitiesGrid {
-    width: 100%;
-}
-
-.activitiesButton {
-    display: flex;
-    width: 100%;
-}
-
-.mat-chip {
-    font-size: 1em;
-    height: 0px;
-    /* Altura fija para todas las chips */
-    line-height: 5px;
-    /* Alineación vertical del texto dentro de la chip */
-    padding: 0 10px;
-    /* Padding horizontal para mantener el contenido centrado */
-    margin: 0;
-    pointer-events: none;
-    /* Desactiva el efecto hover */
-    background-color: rgb(210, 190, 250);
-}
-
-
-mat-chip:hover {
-    background-color: inherit;
-}
-
-.mat-chip-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    margin: 0 0 20px;
-    /* Añadir margen inferior */
-    width: 100%;
-    box-sizing: border-box;
-}
-
-
-
 /* ESTILOS BANDEJA DE ENTRADA DE MENSAJES */
+
+.head_t {
+    width: 900px;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    
+  
+    .title {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 800;
+        font-size: 30px;
+        margin: 0 0 -5px 10px;
+        color:rgb(82, 52, 82);
+        
+    }
+    .unread{
+        font-family: 'Poppins', sans-serif;
+        margin: 0 0 0 10px;
+    }
+}
+
 
 .container {
     width: 900px;
     height: auto;
     display: flex;
     flex-direction: column;
-    margin: 10px;
- 
+    margin: 50px;
+    
+    
 }
+
 
 .row {
     width: 900px;
     height: 60px;
     display: flex;
     flex-direction: row;
+    border-radius: 20px;
+    background-color: rgb(165, 150, 241);
+    color: white;
+    
+   
 }
 
-.itemrow1, .itemrow2, .itemrow3, .itemrow4, .itemrow5{
-    padding: 10px;
+.rowColor {
+    background-color: rgb(233, 229, 240);
+    color: rgb(175, 148, 175);
+
+   .itemrow5 {
+    border: 2px solid rgb(179, 146, 179);
+    border-radius: 20px;
+    color: rgb(175, 148, 175);
+    }
 }
+
+.itemrow1,
+.itemrow2,
+.itemrow3,
+.itemrow4,
+.itemrow5 {
+    padding: 10px;
+
+}
+
 
 .itemrow1 {
-    width: 500px;
+    width: 400px;
     height: 60px;
-    color: white;
-    font-size: small;
-    background-color: rgb(45, 13, 120);
-    overflow: hidden;
     
+    font-size: small;
+    overflow: hidden;
 }
 
 .nameT {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: bold;
-    font-size: 15px;
-    margin-bottom: 8px;
+    font-size: 13px;
+
 }
 
 .itemrow2 {
-    width: 150px;
+    width: 200px;
     height: 60px;
-    color: white;
-    background-color: rgb(45, 13, 120);
+  
     text-align: right;
     font-size: small;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 .dateFormat {
+    display: flex;
+    flex-direction: row;
     letter-spacing: 1px;
     font-weight: bold;
-    font-size: 15px;
-    text-align: right;
+    font-size: 13px;
+    justify-content: flex-end;
+   
+}
+
+.e {
+    margin-left: 10px;
+
+
+}
+
+.status {
+    letter-spacing: 1px;
+    font-size: 13px;
+    font-weight: bold;
+
 }
 
 .itemrow3 {
-    width: 120px;
+    width: 100px;
     height: 60px;
-    color: rgb(45, 13, 120);
-    background-color: rgb(187, 164, 207);
+    
+
     text-align: center;
     font-size: small;
-    
+    display: flex;
+    flex-direction: column;
+
 }
 
-.status{
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-weight: bold;
-    font-size: 15px;
-    letter-spacing: 0.5px;
-}
+
 .itemrow4 {
     width: 70px;
     height: 60px;
-    color: rgb(45, 13, 120);
-    background-color:rgb(209, 187, 220);
-    display: flex;
-  
     
+    box-sizing: border-box;
+
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-size: small;
 }
-.showMsg{
+
+.showMsg {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-img{
-    width: 30px; 
+img {
+    width: 30px;
     align-self: center;
-    
-    
-   }
+
+
+}
 
 .itemrow5 {
-    width: 140px;
+    width: 80px;
     height: 60px;
-    color: rgb(187, 164, 207);
     box-sizing: border-box;
-    border: 2px solid rgb(209, 187, 220);
-    margin-left: 30px;
     text-align: center;
     justify-content: center;
     align-items: center;
     display: flex;
+    flex-direction: column;
+    font-size: small;
+    border: 2px solid rgb(127, 29, 238);
+    color: white;
+    border-radius: 20px;
+
+  
 }
 
-.showProf{
+.showProf {
     display: flex;
     text-align: center;
-    align-items: center ;
+    align-items: center;
     justify-content: center;
     font-size: 13px;
     font-weight: bold;
@@ -163,83 +185,11 @@ img{
 
 }
 
-
-
-/* 
-.container{
-    width: 1000px;
-    height: auto;
-    overflow:hidden;
-}
-
-.name-msg{
-    background-color: rgb(45, 13, 120);
-    color: white;
-    font-size: small;
-    height: 59px;
-    overflow: hidden;
-    
-}
-.name{
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 15px;
-}
-.dateT{
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 15px;
-    text-align: right;
-
-}
-.tour{
-    text-align: right;
-}
-
-.date{
-    background-color:  rgb(45, 13, 120);
-    color: white;
-    font-size: small;
-}
-
-.status{
-    background-color: rgb(187, 164, 207);
-
-    color: white;
-    text-align: right;
-    font-size: small;
-}
-.statusS{
-    text-align: right;
-}
-.statusT{
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 15px;
-    text-align: right;
-
-}
-.buttonVer{
-    background-color: rgb(209, 187, 220);
-    color: rgb(45, 13, 120);
+.read {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    font-size: small;
+    justify-content: center;
+    width: 30px;
+    align-items: center;
 }
-
-.ShowProfile{
-    background-color:  rgb(229, 213, 234);
-    color: rgb(45, 13, 120);
-    text-align: center;
-    font-size: small;
-}
-
-.iconE{
-    color: transparent;   
-}
-.iconA{
-    font-weight: bold;
-    font-size: 15px; 
-    
-} */
