--- a/Front/src/app/main/reservations/reservation-home/reservation-received-detail/reservation-received-detail.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-received-detail/reservation-received-detail.component.css
@@ -21,7 +21,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-left: auto;
+    cursor: pointer;
 }
 
 .boxes {
@@ -30,30 +32,21 @@
     flex-direction: column;
     margin-bottom: 20px;
 
-    .item-scape {
-        opacity: 0;
-        color: rgb(93, 55, 182);
-    }
+   
 
     .boxSc-date {
         display: flex;
-        justify-content: space-between;
-
-        .item-date {
-            text-align: right;
-        }
-
+        margin-bottom: 20px;
+        
         .date1 {
             font-size: small;
             color: white;
-            text-align: right;
         }
 
         .date2 {
-            font-size: large;
+            font-size: medium;
             font-weight: bold;
             color: white;
-            text-align: right;
         }
     }
 
@@ -64,7 +57,6 @@
         border: 3px solid white;
         padding: 15px;
         margin-bottom: 20px;
-        margin-top: 20px;
         text-align: right;
         align-self: flex-end;
 
@@ -116,7 +108,7 @@
 
         .box-autoResp {
             width: 300px;
-            font-size: 20px;
+            font-size: 18px;
             font-family: 'Patua One', serif;
             color: white;
             text-align: center;
@@ -146,6 +138,16 @@
             margin: 0 10px;
         }
     }
+
+    .answBox {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        font-size: 15px;
+        color: white;
+        margin: 15px 0 0 0; 
+    }
 }
 
 o-textarea-input {
@@ -155,4 +157,13 @@ o-textarea-input {
     padding: 10px;
     resize: none;
 
+}
+
+.buttonsBox{
+    text-align: center;
+    margin-top: 11px;
+
+    o-button{
+        margin: 0 10px;
+    }
 }
