--- a/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.css
@@ -1,8 +1,7 @@
 .container {
     width: 500px;
-    height: 650px;
+    height: 700px;
     background: url(../../../../../assets/images/fondo_dial.png);
-    /*definimos fondo cuando ajustemos las medidas del dialog*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,6 +22,8 @@
     justify-content: center;
     align-items: center;
     margin-top: 15px;
+    margin-left: auto;
+    cursor: pointer;
 }
 
 .boxes {
@@ -31,30 +32,21 @@
     flex-direction: column;
     margin-bottom: 20px;
 
-    .item-scape {
-        opacity: 0;
-        color: rgb(93, 55, 182);
-    }
+
 
     .boxSc-date {
         display: flex;
-        justify-content: space-between;
-
-        .item-date {
-            text-align: right;
-        }
-
+       
         .date1 {
             font-size: small;
-            color: white;
-            text-align: right;
+            color: white;          
         }
 
         .date2 {
-            font-size: large;
+            font-size: medium;
             font-weight: bold;
             color: white;
-            text-align: right;
+            
         }
     }
 
@@ -117,7 +109,7 @@
 
         .box-autoResp {
             width: 300px;
-            font-size: 20px;
+            font-size: 18px;
             font-family: 'Patua One', serif;
             color: white;
             text-align: center;
@@ -125,7 +117,7 @@
             margin: 10px 0 10px 0;
         }
     
-        .boxInfo {
+        .infoBox {
             font-size: medium;
             color: white;
             align-self: center;
@@ -134,19 +126,27 @@
         }
     }
 
-    
-    .buttons {
+    .answBox {
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        font-size: 15px;
+        color: white;
+        margin: 15px 0 0 0; 
+    }
+
+
+
+
+    .buttonsBox {
         text-align: center;
         margin-top: 11px;
 
-        .acc-rej {
-            font-size: 15px;
-            color: white;
-            margin: 10px 0 10px 0; 
-        }
-        o-button{
-            margin: 0 10px;
-        }
+    o-button{
+        margin: 0 10px;
+    }
+
     }
 }
 
@@ -156,6 +156,8 @@ o-textarea-input {
     border-radius: 10px;
     padding: 10px;
     resize: none;
-
 }
+
+
+
 
