--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
@@ -219,87 +219,15 @@ mat-chip:hover {
     font-size: small;
     text-transform: capitalize;
     font-weight: bold;
-    
 
 }
 
-
-
-/* 
-.container{
-    width: 1000px;
-    height: auto;
-    overflow:hidden;
+.read, .unread{
+    width: 30px;
 }
 
-.name-msg{
-    background-color: rgb(45, 13, 120);
-    color: white;
-    font-size: small;
-    height: 59px;
-    overflow: hidden;
-    
-}
-.name{
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 15px;
-}
-.dateT{
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 15px;
-    text-align: right;
 
-}
-.tour{
-    text-align: right;
-}
 
-.date{
-    background-color:  rgb(45, 13, 120);
-    color: white;
-    font-size: small;
-}
 
-.status{
-    background-color: rgb(187, 164, 207);
 
-    color: white;
-    text-align: right;
-    font-size: small;
-}
-.statusS{
-    text-align: right;
-}
-.statusT{
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-size: 15px;
-    text-align: right;
 
-}
-.buttonVer{
-    background-color: rgb(209, 187, 220);
-    color: rgb(45, 13, 120);
-    text-align: center;
-    font-size: small;
-}
-
-.ShowProfile{
-    background-color:  rgb(229, 213, 234);
-    color: rgb(45, 13, 120);
-    text-align: center;
-    font-size: small;
-}
-
-.iconE{
-    color: transparent;   
-}
-.iconA{
-    font-weight: bold;
-    font-size: 15px; 
-    
-} */
