--- a/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.html
@@ -10,7 +10,9 @@
 
                 <div clas="item-date">
                     <div class="date1">{{'Reservation Date' | oTranslate}}</div>
-                    <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
+                    <div class="date2">{{'FROM' | oTranslate}} {{reservation_start | date: 'dd/MM/yyyy'}}
+                        {{'TO' | oTranslate}} {{reservation_end | date: 'dd/MM/yyyy'}}
+                    </div>
                 </div>
             </div>
 
