--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
@@ -26,7 +26,7 @@
     width: 900px;
     height: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin: 50px;
     
     
@@ -34,26 +34,65 @@
 
 
 .row {
-    width: 820px;
+    width: 800px;
     height: 60px;
     display: flex;
     flex-direction: row;
-    border-radius: 20px 0 0 20px;
+    border-radius: 20px;
     background-color: rgb(165, 150, 241);
     color: white;
     
    
 }
 
+.row2{
+    width: 70px;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px;
+    background-color: rgb(165, 150, 241);
+    border: 2px solid rgb(127, 29, 238);
+    color: white;
+    font-size: x-small;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    box-sizing: border-box;
+
+}
+
+.showProf {
+    /* display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center; */
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+}
+/* .itemrow5 {
+    width: 80px;
+    height: 60px;
+    margin-left: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: small;
+    border: 2px solid rgb(127, 29, 238);
+    color: white;
+    border-radius: 20px;
+   
+     
+} */
+
 .rowColor {
     background-color: rgb(233, 229, 240);
     color: rgb(175, 148, 175);
-
-   .itemrow5 {
-    border: 2px solid rgb(179, 146, 179);
-    border-radius: 20px;
-    color: rgb(175, 148, 175);
-    }
 }
 
 .itemrow1,
@@ -67,9 +106,9 @@
 
 
 .itemrow1 {
-    width: 400px;
+    width: 350px;
     height: 60px;
-    
+    margin-left: 8px;
     font-size: small;
     overflow: hidden;
 }
@@ -79,6 +118,7 @@
     letter-spacing: 1px;
     font-weight: bold;
     font-size: 13px;
+    margin-bottom: 5px;
 
 }
 
@@ -156,34 +196,9 @@ img {
 
 }
 
-.itemrow5 {
-    width: 80px;
-    height: 60px;
-    box-sizing: border-box;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    font-size: small;
-    border: 2px solid rgb(127, 29, 238);
-    color: white;
-    border-radius: 20px;
 
-  
-}
 
-.showProf {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    font-size: 13px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-transform: uppercase;
 
-}
 
 .read {
     display: flex;
